--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -10,7 +10,7 @@
 }
 
 body {
-  background-color: $body-bg;
+  background-color: $bgc-body;
   font-weight: normal;
   min-height: 100%;
   overflow-x: hidden;
