--- a/src/scss/components/_loading-bar.scss
+++ b/src/scss/components/_loading-bar.scss
@@ -19,7 +19,7 @@
 
   &::before {
     animation: loading 2s linear infinite;
-    background-color: $brand-primary;
+    background-color: $c-primary;
     content: '';
     display: block;
     height: $h-loading-bar;
