--- a/src/sierra.scss
+++ b/src/sierra.scss
@@ -11,7 +11,7 @@
 
 @import 'scss/main';
 
-@import 'scss/background-colors';
+@import 'scss/colors';
 @import 'scss/buttons';
 @import 'scss/forms';
 @import 'scss/helpers';
