--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -4,64 +4,60 @@
 
 $enable-grid-classes: true;
 
-// Brand colors
-$brand-primary:         #1abc9c;
-$brand-secondary:       #9b59b6;
-$brand-dark:            #18232f;
-$brand-light:           #34495e;
+// colors
+$c-white: #fff !default;
+$c-black: #000 !default;
+$c-success: #4caf50 !default;
+$c-info: #5bc0de !default;
+$c-warning: #f0ad4e !default;
+$c-error: #e74c3c !default;
+$c-gray: #969da6 !default;
+$c-gray-light: #edf3f6 !default;
 
-$color-success:         #4caf50;
-$color-info:            #5bc0de;
-$color-warning:         #f0ad4e;
-$color-error:           #e74c3c;
+$c-primary: #1abc9c !default;
+$c-secondary: #9b59b6 !default;
+$c-dark: #18232f !default;
+$c-light: #34495e !default;
+$c-text: $c-white !default;
 
-$body-bg:               #2c3e50;
+$bgc-body: #2c3e50 !default;
 
-$gray:                  #dee6ea;
-$gray-light:            #edf3f6;
-$deep-blue:             #171722; // Deprecated
-$white:                 #fff; // deprecated
-$c-white:               #fff;
+$c-map: (
+  'primary':              $c-primary,
+  'dark':                 $c-dark,
+  'secondary':            $c-secondary,
+  'white':                $c-white,
+  'success':              $c-success,
+  'info':                 $c-info,
+  'warning':              $c-warning,
+  'error':                $c-error,
+  'gray':                 $c-gray,
+  'gray-light':           $c-gray-light
+);
 
-// Borders
-$border-color:          #465f78;
 
 // Shadows
 $shadow-color:          rgba(0, 0, 0, .2);
 $box-shadow:            0 0 5px $shadow-color;
 
 // Social colors
-$fb: rgb(59, 89, 182);
-$tw: rgb(64, 153, 255);
-$googleplus: rgb(215, 61, 50);
-$pinterest: rgb(203, 32, 39);
-$skype: rgb(18, 165, 244);
-$spotify: rgb(129, 183, 26);
-$instagram: #4e433c;
-$tumblr: #2b4964;
-$vimeo: #86b32d;
-$soundcloud: #f76600;
-$youtube: #ff3333;
-$linkedin: #4875b4;
-$flickr: #fe0883;
-$foursquare: #8fd400;
+$c-fb: rgb(59, 89, 182);
+$c-tw: rgb(64, 153, 255);
+$c-googleplus: rgb(215, 61, 50);
+$c-pinterest: rgb(203, 32, 39);
+$c-skype: rgb(18, 165, 244);
+$c-spotify: rgb(129, 183, 26);
+$c-instagram: #4e433c;
+$c-tumblr: #2b4964;
+$c-vimeo: #86b32d;
+$c-soundcloud: #f76600;
+$c-youtube: #ff3333;
+$c-linkedin: #4875b4;
+$c-flickr: #fe0883;
+$c-foursquare: #8fd400;
 
-// Text colors
-$text-color:            $white;       // deprecated. Use $text-body instead.
-$text-body:             $text-color;
-$text-gray:             #969da6;
-
-$text-color-map: (
-  primary:              $brand-primary,
-  secondary:            $brand-secondary,
-  body:                 $text-body,
-  gray:                 $text-gray,
-  green:                $color-success,
-  success:              $color-success,
-  red:                  $color-error,
-  error:                $color-error,
-  warning:              $color-warning
-);
+$bdc-base: #465f78 !default;
+$bd-m: 1px solid $bdc-base !default;
 
 
 /**
@@ -72,11 +68,10 @@ $gutterwidth:               24px;
 $container-maxwidth:        1380px;
 $container-medium-maxwidth: 944px;
 $container-small-maxwidth:  400px;
-$radius:                    3px; // Deprecated
-$bdr-m:                     3px;
 $border-box:                true;
 
-
+$bdr-base: 3px !default;
+$bdr-m: $bdr-base !default;
 
 /**
  *  GRID
@@ -118,42 +113,28 @@ $container-max-widths: (
  *  COMPONENTS
  */
 
-// Background colors
-$background-color-map: (
-  'primary':              $brand-primary,
-  'dark':                 $brand-dark,
-  'secondary':            $brand-secondary,
-  'white':                $white,
-  'success':              $color-success,
-  'info':                 $color-info,
-  'warning':              $color-warning,
-  'error':                $color-error,
-  'gray':                 $gray,
-  'gray-light':           $gray-light
-);
-
 // Badges
-$c-badge: $text-body !default;
-$bg-badge: $brand-light !default;
+$c-badge: $c-text !default;
+$bg-badge: $c-light !default;
 $bdr-badge: $bdr-m !default;
 $lh-badge: 1.2em !default;
 $p-badge: .2em .7em !default;
 $fz-badge-lg: 1.3em !default;
 $fz-badge-xs: .7em !default;
 $badges-color-map: (
-  primary:              $brand-primary,
-  secondary:            $brand-secondary,
-  dark:                 $brand-dark,
-  light:                $gray,
-  success:              $color-success,
-  error:                $color-error,
-  warning:              $color-warning
+  primary:              $c-primary,
+  secondary:            $c-secondary,
+  dark:                 $c-dark,
+  light:                $c-gray,
+  success:              $c-success,
+  error:                $c-error,
+  warning:              $c-warning
 ) !default;
 
 // Buttons
 $button-bg-color:       #64829f; // default color for buttons
-$button-text-color:     $text-body; // default color for buttons
-$button-border-color:   $body-bg;
+$button-text-color:     $c-text; // default color for buttons
+$button-border-color:   $bgc-body;
 $button-border-radius:  2em;
 $button-sizes: (
   'normal': (
@@ -189,8 +170,8 @@ $button-sizes: (
 );
 
 // Forms
-$form-bg-color:               $brand-light;
-$form-text-color:             $text-body;
+$form-bg-color: $c-light;
+$form-text-color: $c-text;
 
 // Loading bar
 $h-loading-bar: 4px !default;
@@ -206,32 +187,32 @@ $z-loading-spinner: 1000 !default;
 // Paginator
 $mr-paginator-item: 2px !default;
 $bdr-paginator-item: $bdr-m !default;
-$bg-paginator-item: $brand-light !default;
-$c-paginator-item: $text-body !default;
-$bg-paginator-item-active: $brand-primary !default;
-$c-paginator-item-active: $text-body !default;
+$bg-paginator-item: $c-light !default;
+$c-paginator-item: $c-text !default;
+$bg-paginator-item-active: $c-primary !default;
+$c-paginator-item-active: $c-text !default;
 
 // Tabs
-$bdb-tabs-item-selected: 3px solid $brand-primary !default;
+$bdb-tabs-item-selected: 3px solid $c-primary !default;
 $bdb-tabs-item: 3px solid transparent !default;
-$bdb-tabs: 1px solid $border-color !default;
-$c-tabs-item-hover: $brand-primary !default;
-$c-tabs-item-selected: $brand-primary !default;
-$c-tabs-item: $text-gray !default;
+$bdb-tabs: $bd-m !default;
+$c-tabs-item-hover: $c-primary !default;
+$c-tabs-item-selected: $c-primary !default;
+$c-tabs-item: $c-gray !default;
 $m-tabs-item: 0 30px 0 0 !default;
 $miw-tabs-item: 70px !default;
 $p-tabs-item: 15px !default;
 
 // Tables
-$table-bg-color:        $brand-light;
-$table-header-bg-color: $body-bg;
-$table-text-color:      $text-body;
+$table-bg-color:        $c-light;
+$table-header-bg-color: $bgc-body;
+$table-text-color:      $c-text;
 
 // Tags
-$bg-tag-dot: $body-bg !default;
-$bg-tag: $brand-light !default;
+$bg-tag-dot: $bgc-body !default;
+$bg-tag: $c-light !default;
 $bdr-tag: $bdr-m 0 0 $bdr-m !default;
-$c-tag: $text-body !default;
+$c-tag: $c-text !default;
 $lh-tag: 14px !default;
 $m-tag: 0 25px 10px 0 !default;
 $p-tag: 10px !default;
