adjust notification component

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -184,6 +184,11 @@ $size-loading-spinner-inner: 9px !default;
 $size-loading-spinner: 30px !default;
 $z-loading-spinner: 1000 !default;
 
+// Notification
+$mb-notification: 1em !default;
+$p-notification: 1em !default;
+$bdr-notification: $bdr-m !default;
+
 // Paginator
 $mr-paginator-item: 2px !default;
 $bdr-paginator-item: $bdr-m !default;
