--- a/src/sierra.scss
+++ b/src/sierra.scss
@@ -16,7 +16,6 @@
 @import 'scss/forms';
 @import 'scss/helpers';
 @import 'scss/layout';
-@import 'scss/message-bars';
 @import 'scss/tables';
 @import 'scss/typography';
 
@@ -24,6 +23,7 @@
 @import 'scss/components/badge';
 @import 'scss/components/loading-bar';
 @import 'scss/components/loading-spinner';
+@import 'scss/components/notification';
 @import 'scss/components/paginator';
 @import 'scss/components/tabs';
 @import 'scss/components/tag';
