--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -204,7 +204,7 @@ select::-ms-expand {
 
 // textarea
 .textarea {
-  background-color: $table-bg-color;
+  background-color: $bgc-table;
   padding: 0;
   width: 100%;
 
