--- a/src/sierra.scss
+++ b/src/sierra.scss
@@ -16,7 +16,6 @@
 @import 'scss/forms';
 @import 'scss/helpers';
 @import 'scss/layout';
-@import 'scss/tables';
 @import 'scss/typography';
 
 // Components
@@ -25,6 +24,7 @@
 @import 'scss/components/loading-spinner';
 @import 'scss/components/notification';
 @import 'scss/components/paginator';
+@import 'scss/components/table';
 @import 'scss/components/tabs';
 @import 'scss/components/tag';
 
