--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -91,7 +91,7 @@ button {
       display: block;
       margin-left: auto;
       margin-right: auto;
-      max-width: $container-small-maxwidth;
+      max-width: $mwi-container-small;
       width: 100%;
     }
   }
