--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -33,7 +33,7 @@ $c-map: (
   'error':                $c-error,
   'gray':                 $c-gray,
   'gray-light':           $c-gray-light
-);
+) !default;
 
 
 // Shadows
@@ -41,44 +41,55 @@ $shadow-color:          rgba(0, 0, 0, .2);
 $box-shadow:            0 0 5px $shadow-color;
 
 // Social colors
-$c-fb: rgb(59, 89, 182);
-$c-tw: rgb(64, 153, 255);
-$c-googleplus: rgb(215, 61, 50);
-$c-pinterest: rgb(203, 32, 39);
-$c-skype: rgb(18, 165, 244);
-$c-spotify: rgb(129, 183, 26);
-$c-instagram: #4e433c;
-$c-tumblr: #2b4964;
-$c-vimeo: #86b32d;
-$c-soundcloud: #f76600;
-$c-youtube: #ff3333;
-$c-linkedin: #4875b4;
-$c-flickr: #fe0883;
-$c-foursquare: #8fd400;
+$c-fb: rgb(59, 89, 182) !default;
+$c-tw: rgb(64, 153, 255) !default;
+$c-googleplus: rgb(215, 61, 50) !default;
+$c-pinterest: rgb(203, 32, 39) !default;
+$c-skype: rgb(18, 165, 244) !default;
+$c-spotify: rgb(129, 183, 26) !default;
+$c-instagram: #4e433c !default;
+$c-tumblr: #2b4964 !default;
+$c-vimeo: #86b32d !default;
+$c-soundcloud: #f76600 !default;
+$c-youtube: #ff3333 !default;
+$c-linkedin: #4875b4 !default;
+$c-flickr: #fe0883 !default;
+$c-foursquare: #8fd400 !default;
 
+// Typography
+$ff-base: 'Lato', sans-serif !default;
+$fw-base: 400 !default;
+$fz-base: 14px !default;
+$lh-base: 1.5em !default;
+
+$fz-huge: 30px !default;
+$fz-big: 24px !default;
+$fz-medium: 14px !default;
+$fz-small: 12px !default;
+
+// Body
+$c-body: $c-text !default;
+$ff-body: $ff-base !default;
+$fz-body: $fz-base !default;
+$fw-body: $fw-base !default;
+$lh-body: $lh-base !default;
+
+// Borders
 $bdc-base: #465f78 !default;
 $bd-m: 1px solid $bdc-base !default;
 
 
-/**
- *  LAYOUT
- */
-
+// Layout
 $w-gutter:               24px;
 $mwi-container:        1380px;
 $mwi-container-medium: 944px;
 $mwi-container-small:  400px;
-$border-box:                true;
 
+// Borders
 $bdr-base: 3px !default;
 $bdr-m: $bdr-base !default;
 
-/**
- *  GRID
- */
-
-// Grid breakpoints
-
+// Grid
 $grid-breakpoints: (
   xs: 0,
   sm: 576px,
@@ -87,18 +98,8 @@ $grid-breakpoints: (
   xl: 1200px
 ) !default;
 
-// Grid columns
-//
-// Set the number of columns and specify the width of the gutters.
-
-$grid-columns:                12 !default;
-$grid-gutter-width:           $w-gutter !default;
-
-
-
-// Grid containers
-//
-// Define the maximum width of `.container` for different screen sizes.
+$grid-columns: 12 !default;
+$grid-gutter-width: $w-gutter !default;
 
 $container-max-widths: (
   sm: 540px,
@@ -106,7 +107,6 @@ $container-max-widths: (
   lg: 960px,
   xl: 1140px
 ) !default;
-
 
 
 /**
@@ -229,17 +229,5 @@ $m-tag: 0 25px 10px 0 !default;
 $p-tag: 10px !default;
 $size-tag-dot: 5px !default;
 
-// Typography
-$basefont: 'Lato', sans-serif;
-$codefont: 'Courier New', monospace;
-
-$font-size-base:        14px;
-$font-size-base-medium: 15px;
-$font-size-base-large:  15px;
-
-$line-height-base:      1.5em;
-$font-weight-base:      400;
-
-$heading-font:          $basefont;
+$heading-font:          $ff-base;
 $heading-weight:        300;
-$heading-case:          none;
