adjusting variable names

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -13,23 +13,23 @@
 
 // Borders
 .border {
-  border: $bd-m;
+  border: $bd-medium;
 }
 
 .border-bottom {
-  border-bottom: $bd-m;
+  border-bottom: $bd-medium;
 }
 
 .border-left {
-  border-left: $bd-m;
+  border-left: $bd-medium;
 }
 
 .border-right {
-  border-right: $bd-m;
+  border-right: $bd-medium;
 }
 
 .border-top {
-  border-top: $bd-m;
+  border-top: $bd-medium;
 }
 
 // Text
