--- a/src/scss/components/_notification.scss
+++ b/src/scss/components/_notification.scss
@@ -12,7 +12,7 @@
  */
 
 .notification {
-  border-radius: $bdr-m;
+  border-radius: $bdr-medium;
   margin-bottom: $mb-notification;
   padding: $p-notification;
 
