--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -19,6 +19,8 @@ $c-secondary: #9b59b6 !default;
 $c-dark: #18232f !default;
 $c-light: #34495e !default;
 $c-text: $c-white !default;
+$c-link: $c-primary !default;
+$c-link-hover: rgba($c-primary, .8) !default;
 
 $bgc-body: #2c3e50 !default;
 
@@ -34,11 +36,6 @@ $c-map: (
   'gray':                 $c-gray,
   'gray-light':           $c-gray-light
 ) !default;
-
-
-// Shadows
-$shadow-color:          rgba(0, 0, 0, .2);
-$box-shadow:            0 0 5px $shadow-color;
 
 // Social colors
 $c-fb: rgb(59, 89, 182) !default;
@@ -56,16 +53,30 @@ $c-linkedin: #4875b4 !default;
 $c-flickr: #fe0883 !default;
 $c-foursquare: #8fd400 !default;
 
+// Shadows
+$bxsh-base:  0 0 5px rgba(0, 0, 0, .2) !default;
+$bxsh-medium:  $bxsh-base !default;
+
 // Typography
+$fw-light: 300 !default;
+$fw-normal: 400 !default;
+$fw-bold: 600 !default;
+$fw-headings: $fw-light !default;
+
 $ff-base: 'Lato', sans-serif !default;
 $fw-base: 400 !default;
-$fz-base: 14px !default;
+$fz-base: 16px !default;
 $lh-base: 1.5em !default;
 
 $fz-huge: 30px !default;
 $fz-big: 24px !default;
-$fz-medium: 14px !default;
+$fz-medium: $fz-base !default;
 $fz-small: 12px !default;
+
+$lh-huge: 1.3em !default;
+$lh-big: 1.3em !default;
+$lh-medium: $lh-base !default;
+$lh-small: 1.3em !default;
 
 // Body
 $c-body: $c-text !default;
@@ -74,20 +85,30 @@ $fz-body: $fz-base !default;
 $fw-body: $fw-base !default;
 $lh-body: $lh-base !default;
 
-// Borders
+// Border
 $bdc-base: #465f78 !default;
-$bd-m: 1px solid $bdc-base !default;
+$bd-medium: 1px solid $bdc-base !default;
+$bdr-base: 3px !default;
+$bdr-medium: $bdr-base !default;
 
+// Margin
+$m-xsmall: 2px !default;
+$m-small: 4px !default;
+$m-medium: 8px !default;
+$m-big: 16px !default;
+$m-huge: 24px !default;
+
+// Padding
+$p-small: 4px !default;
+$p-medium: 8px !default;
+$p-big: 16px !default;
+$p-huge: 24px !default;
 
 // Layout
-$w-gutter:               24px;
-$mwi-container:        1380px;
-$mwi-container-medium: 944px;
-$mwi-container-small:  400px;
-
-// Borders
-$bdr-base: 3px !default;
-$bdr-m: $bdr-base !default;
+$w-gutter: 24px !default;
+$mwi-container: 1380px !default;
+$mwi-container-medium: 944px !default;
+$mwi-container-small: 400px !default;
 
 // Grid
 $grid-breakpoints: (
@@ -116,11 +137,11 @@ $container-max-widths: (
 // Badges
 $c-badge: $c-text !default;
 $bg-badge: $c-light !default;
-$bdr-badge: $bdr-m !default;
+$bdr-badge: $bdr-medium !default;
 $lh-badge: 1.2em !default;
-$p-badge: .2em .7em !default;
-$fz-badge-lg: 1.3em !default;
-$fz-badge-xs: .7em !default;
+$p-badge: $p-medium $p-big !default;
+$fz-badge-big: 1.3em !default;
+$fz-badge-small: .7em !default;
 $badges-color-map: (
   primary:              $c-primary,
   secondary:            $c-secondary,
@@ -185,13 +206,13 @@ $size-loading-spinner: 30px !default;
 $z-loading-spinner: 1000 !default;
 
 // Notification
-$mb-notification: 1em !default;
-$p-notification: 1em !default;
-$bdr-notification: $bdr-m !default;
+$mb-notification: $m-big !default;
+$p-notification: $p-big !default;
+$bdr-notification: $bdr-medium !default;
 
 // Paginator
-$mr-paginator-item: 2px !default;
-$bdr-paginator-item: $bdr-m !default;
+$mr-paginator-item: $m-xsmall !default;
+$bdr-paginator-item: $bdr-medium !default;
 $bg-paginator-item: $c-light !default;
 $c-paginator-item: $c-text !default;
 $bg-paginator-item-active: $c-primary !default;
@@ -200,13 +221,13 @@ $c-paginator-item-active: $c-text !default;
 // Tabs
 $bdb-tabs-item-selected: 3px solid $c-primary !default;
 $bdb-tabs-item: 3px solid transparent !default;
-$bdb-tabs: $bd-m !default;
+$bdb-tabs: $bd-medium !default;
 $c-tabs-item-hover: $c-primary !default;
 $c-tabs-item-selected: $c-primary !default;
 $c-tabs-item: $c-gray !default;
-$m-tabs-item: 0 30px 0 0 !default;
+$m-tabs-item: 0 $m-huge 0 0 !default;
 $miw-tabs-item: 70px !default;
-$p-tabs-item: 15px !default;
+$p-tabs-item: $p-big !default;
 
 // Table
 $bgc-table-header: $bgc-body !default;
@@ -215,18 +236,18 @@ $c-table-heading: $c-gray !default;
 $c-table-text: $c-text !default;
 $fw-table-heading: normal !default;
 $mwi-table: 100% !default;
-$p-table-cell: 10px !default;
-$p-table-heading: 10px !default;
+$p-table-cell: $p-medium !default;
+$p-table-heading: $p-medium !default;
 $w-table: 100% !default;
 
 // Tags
 $bg-tag-dot: $bgc-body !default;
 $bg-tag: $c-light !default;
-$bdr-tag: $bdr-m 0 0 $bdr-m !default;
+$bdr-tag: $bdr-medium 0 0 $bdr-medium !default;
 $c-tag: $c-text !default;
 $lh-tag: 14px !default;
-$m-tag: 0 25px 10px 0 !default;
-$p-tag: 10px !default;
+$m-tag: 0 $m-huge $m-medium 0 !default;
+$p-tag: $p-medium !default;
 $size-tag-dot: 5px !default;
 
 $heading-font:          $ff-base;
