--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -4,11 +4,11 @@
 
 .section {
   @include media-breakpoint-up(md) {
-    padding-bottom: 40px;
-    padding-top: 40px;
+    padding-bottom: $p-huge * 2;
+    padding-top: $p-huge * 2;
   }
-  padding-bottom: 20px;
-  padding-top: 20px;
+  padding-bottom: $p-huge;
+  padding-top: $p-huge;
 }
 
 .container {
