--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -10,29 +10,37 @@ button {
 }
 
 .button {
-  $button-meta: map-get($button-sizes, normal);
-
-  background-color: $button-bg-color;
-  border: 1px solid $button-border-color;
-  border-radius: $button-border-radius;
-  color: $button-text-color;
+  background-color: $bg-button;
+  border: $bd-button;
+  border-radius: $bdr-button;
+  color: $c-button;
   display: inline-block;
-  font-family: $ff-base;
-  font-size: map-get($button-meta, fontSize);
-  font-weight: 700;
-  line-height: #{map-get($button-meta, lineHeight)}em;
-  margin: 10px;
-  padding: map-get($button-meta, paddingTB) map-get($button-meta, paddingLR);
+  font-family: $ff-button;
+  font-size: $fz-button;
+  font-weight: $fw-button;
+  line-height: $lh-button;
+  margin: $m-button;
+  padding: $p-button;
   text-align: center;
   text-decoration: none;
-  text-transform: uppercase;
+  text-transform: $tt-button;
   transition: opacity .2s ease-in-out;
   white-space: nowrap;
+
+  &--big {
+    font-size: $fz-button-big;
+    padding: $p-button-big;
+  }
+
+  &--small {
+    font-size: $fz-button-small;
+    padding: $p-button-small;
+  }
 
   &:focus,
   &:hover,
   &:active {
-    color: $c-text;
+    color: $c-button;
   }
 
   &:hover {
@@ -45,59 +53,12 @@ button {
     opacity: 1;
   }
 
-  &:first-child {
-    margin-left: 0;
-  }
-
   &:last-child {
     margin-right: 0;
   }
 
-  // Sizes
-  &.button {
-    &-big {
-      $button-meta: map-get($button-sizes, big);
-
-      border-radius: $button-border-radius;
-      font-size: map-get($button-meta, fontSize);
-      line-height: #{map-get($button-meta, lineHeight)}em;
-      padding: map-get($button-meta, paddingTB) map-get($button-meta, paddingLR);
-    }
-
-    &-small {
-      $button-meta: map-get($button-sizes, small);
-
-      border-radius: $button-border-radius;
-      font-size: map-get($button-meta, fontSize);
-      line-height: #{map-get($button-meta, lineHeight)}em;
-      padding: map-get($button-meta, paddingTB) map-get($button-meta, paddingLR);
-
-    }
-
-    &-huge {
-      $button-meta: map-get($button-sizes, huge);
-
-      border-radius: $button-border-radius;
-      font-size: map-get($button-meta, fontSize);
-      line-height: #{map-get($button-meta, lineHeight)}em;
-      padding: map-get($button-meta, paddingTB) map-get($button-meta, paddingLR);
-
-      i {
-        font-size: 20px;
-      }
-    }
-
-    &-large {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-      max-width: $mwi-container-small;
-      width: 100%;
-    }
-  }
-
   // colors
-  &.button-primary {
+  &--primary {
     background-color: $c-primary;
     border: 1px solid $c-primary;
     color: $c-white;
@@ -107,7 +68,7 @@ button {
     }
   }
 
-  &.button-secondary {
+  &--secondary {
     background-color: $c-secondary;
     border: 1px solid $c-secondary;
     color: $c-white;
@@ -117,124 +78,38 @@ button {
     }
   }
 
-  &.button-transparent {
-    background-color: transparent;
-    border: 1px solid transparent;
-  }
-
-  &.button-white {
+  &--white {
     background-color: $c-white;
     border: 1px solid $c-white;
     color: $c-primary;
   }
 
-  &.button-green {
+  &--green {
     background-color: $c-success;
     border-color: $c-success;
     color: $c-white;
   }
 
-  &.button-red {
+  &--red {
     background-color: $c-error;
     border-color: $c-error;
     color: $c-white;
   }
 
   // types
-  &.button-outlined {
+  &--outlined {
     background-color: transparent;
     border: 1px solid $c-primary;
     color: $c-primary;
   }
 
-  &.button-disabled {
+  &--disabled {
     cursor: default;
     opacity: .4;
   }
 
-  &.button-only-icon {
-    height: 43px;
-    line-height: 43px;
-    padding: 0;
-    width: 43px;
-
-    i {
-      margin-left: 0;
-      margin-right: 0;
-    }
-  }
-
-  // icons on buttons
-  i {
-    margin-bottom: -2%;
-    margin-left: .8em;
-    margin-right: .8em;
-    position: relative;
-    transition: all .3s ease;
-
-    &:last-child {
-      margin-right: 0;
-    }
-
-    &:first-child {
-      margin-left: 0;
-    }
-
-    &::before {
-      float: left;
-    }
-
-    // fix vertical position on large icons
-    &.fa-lg{
-      margin-bottom: 0;
-    }
-  }
-}
-
-.button-link {
-  color: $c-primary;
-  font-family: 'Lato', sans-serif;
-  font-size: 12px;
-  font-weight: 700;
-  text-transform: uppercase;
-
-  i {
-    font-size: 18px;
-    line-height: 14px;
-    margin-bottom: -2px;
-    margin-left: 4px;
-    margin-right: 8px;
-    transition: all .3s ease;
-
-    &::before {
-      float: left;
-    }
-  }
-  // (animation rotating icon)
-  &.button-link-rotated {
-    i {
-      transform: rotate(-180deg);
-    }
-  }
-}
-
-// button group
-.button-group {
-  white-space: nowrap;
-
-  .button {
-    display: inline-block;
-    margin: 0;
-
-    &:not(:first-child) {
-      border-bottom-left-radius: 0;
-      border-top-left-radius: 0;
-    }
-
-    &:not(:last-child) {
-      border-bottom-right-radius: 0;
-      border-right: 0;
-      border-top-right-radius: 0;
-    }
+  &--transparent {
+    background-color: transparent;
+    border: 1px solid transparent;
   }
 }
