--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -163,7 +163,7 @@ $ff-button: $ff-body;
 $fz-button: $fz-medium;
 $fw-button: $fw-bold;
 $lh-button: $lh-body;
-$m-button: 0 $m-medium $m-medium 0;
+$m-button: 0 $m-medium $m-medium $m-medium;
 $p-button: $p-medium $p-big;
 $tt-button: uppercase;
 
@@ -228,7 +228,7 @@ $bg-tag-dot: $bgc-body !default;
 $bg-tag: $c-light !default;
 $bdr-tag: $bdr-medium 0 0 $bdr-medium !default;
 $c-tag: $c-text !default;
-$lh-tag: 14px !default;
+$lh-tag: 16px !default;
 $m-tag: 0 $m-huge $m-medium 0 !default;
 $p-tag: $p-medium !default;
 $size-tag-dot: 5px !default;
