--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -5,13 +5,12 @@
 // reset default buttons
 button {
   background-color: transparent;
-  border: 0;
   cursor: pointer;
 }
 
 .button {
   background-color: $bg-button;
-  border: $bd-button;
+  border: 0;
   border-radius: $bdr-button;
   color: $c-button;
   display: inline-block;
@@ -37,6 +36,14 @@ button {
     padding: $p-button-small;
   }
 
+  &--mobileFull {
+    @include media-breakpoint-down(md) {
+      margin-left: 0;
+      margin-right: 0;
+      width: 100%;
+    }
+  }
+
   &:focus,
   &:hover,
   &:active {
@@ -44,8 +51,9 @@ button {
   }
 
   &:hover {
+    background-color: rgba($c-primary, .8);
+    color: $c-white;
     cursor: pointer;
-    opacity: .8;
     text-decoration: none;
   }
 
@@ -53,63 +61,61 @@ button {
     opacity: 1;
   }
 
+  &:first-child {
+    margin-left: 0;
+  }
+
   &:last-child {
     margin-right: 0;
   }
 
   // colors
-  &--primary {
-    background-color: $c-primary;
-    border: 1px solid $c-primary;
-    color: $c-white;
-
-    &:hover {
-      color: $c-white;
-    }
-  }
-
   &--secondary {
     background-color: $c-secondary;
-    border: 1px solid $c-secondary;
     color: $c-white;
 
     &:hover {
+      background-color: rgba($c-secondary, .8);
       color: $c-white;
     }
   }
 
   &--white {
     background-color: $c-white;
-    border: 1px solid $c-white;
     color: $c-primary;
+
+    &:hover {
+      background-color: rgba($c-white, .8);
+      color: $c-primary;
+    }
   }
 
   &--green {
     background-color: $c-success;
-    border-color: $c-success;
     color: $c-white;
+
+    &:hover {
+      background-color: rgba($c-success, .8);
+      color: $c-white;
+    }
   }
 
   &--red {
     background-color: $c-error;
-    border-color: $c-error;
     color: $c-white;
-  }
 
-  // types
-  &--outlined {
-    background-color: transparent;
-    border: 1px solid $c-primary;
-    color: $c-primary;
-  }
-
-  &--disabled {
-    cursor: default;
-    opacity: .4;
+    &:hover {
+      background-color: rgba($c-error, .8);
+      color: $c-white;
+    }
   }
 
   &--transparent {
     background-color: transparent;
-    border: 1px solid transparent;
+
+    &:hover {
+      background-color: transparent;
+      opacity: .8;
+    }
   }
 }
