--- a/src/sierra.scss
+++ b/src/sierra.scss
@@ -11,7 +11,6 @@
 @import 'scss/main';
 
 @import 'scss/colors';
-@import 'scss/buttons';
 @import 'scss/forms';
 @import 'scss/helpers';
 @import 'scss/layout';
@@ -19,6 +18,7 @@
 
 // Components
 @import 'scss/components/badge';
+@import 'scss/components/buttons';
 @import 'scss/components/loading-bar';
 @import 'scss/components/loading-spinner';
 @import 'scss/components/notification';
