optional reset file

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -2,7 +2,8 @@
  *  VARIABLES
  */
 
-$enable-grid-classes: true;
+$enable-grid-classes: true !default; // generate grid classes
+$enable-reset-defaults: true !default; // reset default browser values
 
 // colors
 $c-white: #fff !default;
