--- a/src/sierra.scss
+++ b/src/sierra.scss
@@ -6,7 +6,7 @@
 // Library
 @import 'scss/utils/mixins';
 @import 'scss/utils/breakpoints';
-@import 'scss/vendor/reset';
+@import 'scss/reset';
 
 @import 'scss/main';
 
