--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -18,83 +18,31 @@ input:-webkit-autofill {
   box-shadow: 0 0 0 1000px $bgc-form inset;
 }
 
-// Disable arrow on selects
-select {
-  -moz-appearance: window;
-  -webkit-appearance: none;
-}
-
-// styles
-select,
-input[type=text],
-textarea {
-  border-radius: $bdr-medium;
-  font-size: $fz-body;
-  line-height: 1.5em;
-  transition: background-color .2s ease-in-out;
-}
-
+// Common styles
 .textarea,
 .input,
 .select {
-  //border:1px solid $blue-light;
-  border: 0;
-  border: $bd-medium;
-  border-radius: $bdr-medium;
+  border: $bd-form;
+  border-radius: $bdr-form;
   box-shadow: none;
   display: block;
   font-weight: normal;
   margin-bottom: 20px;
+  overflow: hidden;
 
   :focus {
     outline: none;
   }
 
-  &.error {
-    border: 1px solid $c-error;
-    margin-bottom: 0; // we will display an error message
-  }
-
-  &.small {
-    font-size: 13px;
-    padding: 4px 6px;
+  &.has-error {
+    background: $bgc-form-error;
+    border: $bd-form-error;
+    margin-bottom: 0; // we should display an error message
   }
 }
-
-// Error handling (deprecated)
-.has-error {
-  .textarea,
-  .input,
-  .select {
-    border: 1px solid $c-primary;
-  }
-}
-
-// Specific selector for mobonaut checkout. Must delete ASAP.
-.has-error .control-label {
-  color:$c-primary;
-}
-
-// Specific selector for error handling in mobonaut checkout. Must delete ASAP.
-label.error {
-  color: $c-error;
-  font-size: 13px;
-  line-height: 13px;
-  position: absolute;
-  right: 0;
-  top: -16px;
-}
-
-input[type=checkbox] {
-  appearance: checkbox;
-}
-
-input[type=radio] {
-  appearance: radio;
-}
-
 
 .select {
+  background-color: $bgc-form;
   display: inline-block;
   margin-right: $m-medium;
   position: relative;
@@ -104,7 +52,7 @@ input[type=radio] {
   }
 
   &-fullWidth {
-    display: inline-block;
+    display: block;
     margin-left: 0;
     margin-right: 0;
     width: 100%;
@@ -112,11 +60,17 @@ input[type=radio] {
 
   select {
     appearance: none;
-    background-color: $bgc-form;
+    background-color: transparent;
     border: 0;
-    border-radius: $bdr-form;
+    border-radius: 0;
     color: $c-form;
-    padding: $p-medium 30px $p-medium $p-big;
+    display: block;
+    font-size: $fz-form;
+    line-height: $lh-medium;
+    margin: 0;
+    padding: $p-form;
+    padding-right: 30px;
+    transition: $trs-form;
     width: 100%;
 
     &:active,
@@ -134,7 +88,6 @@ input[type=radio] {
   &::after,
   &::before {
     background: $c-primary;
-    border-radius: 2px;
     content: '';
     display: block;
     height: 2px;
@@ -167,10 +120,17 @@ input[type=radio] {
     color: $c-form;
     display: block;
     font-family: $ff-body;
-    margin-bottom: 0;
-    min-height: 120px;
-    padding: $p-medium $p-big;
+    font-size: $fz-form;
+    line-height: $lh-medium;
+    margin: 0;
+    min-height: $mih-form-textarea;
+    padding: $p-form;
+    transition: $trs-form;
     width: 100%;
+
+    &::placeholder {
+      color: $c-form-placeholder;
+    }
 
     &:focus,
     &:active {
@@ -181,138 +141,127 @@ input[type=radio] {
   }
 }
 
-// Unused selector. Pending delete.
-.form-button-wrap {
-  text-align: center;
 
-  @include media-breakpoint-up(bp-medium) {
-    text-align: right;
+.checkbox {
+  margin-bottom: $m-small;
+  position: relative;
+
+  input[type='checkbox'] {
+    display: none;
+
+    &:checked + label::after {
+      animation: checkboxAndRadioAnimation .25s;
+      content: '';
+      transform: scale(1) rotate(45deg);
+    }
+
+    & + label {
+      display: block;
+      overflow: hidden;
+      padding-left: 30px;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+
+      &::before {
+        background-color: $bgc-form;
+        border: $bd-form;
+        border-radius: $bdr-medium;
+        content: '';
+        display: inline-block;
+        height: 20px;
+        left: 0;
+        margin-top: -10px;
+        position: absolute;
+        top: 50%;
+        width: 20px;
+      }
+
+      &::after {
+        border-bottom: 3px solid $c-primary;
+        border-right: 3px solid $c-primary;
+        display: block;
+        height: 12px;
+        left: 11px;
+        margin-left: -4px;
+        margin-top: -7px;
+        position: absolute;
+        top: 50%;
+        width: 7px;
+        z-index: 1;
+      }
+    }
   }
 }
 
-/**
- *  CHECKBOXES AND RADIO BUTTONS
- *
- *  Markup:
- *  -------
- *
- *  <div class="radio">
- *    <input id="hello" name="hello" type="radio" value=""/>
- *    <label for="hello" >option 1</label>
- *  </div>
- *
- *  <div class="checkbox">
- *    <input id="goodbye" name="goodbye" type="checkbox" value=""/>
- *    <label for="goodbye">option {{$i}}</label>
- *  </div>
- *
- */
-
-.checkbox,
 .radio {
-  margin: 0;
-  margin-bottom: 5px;
-  margin-right: 20px;
-  padding-left: 25px;
+  margin-bottom: $m-small;
   position: relative;
+
+  input[type='radio'] {
+    display: none;
+
+    &:checked + label::after {
+      animation: checkboxAndRadioAnimation .25s;
+      content: '';
+      transform: scale(1) rotate(45deg);
+    }
+
+    & + label {
+      display: block;
+      overflow: hidden;
+      padding-left: 30px;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+
+      &::before {
+        background-color: $bgc-form;
+        border: $bd-form;
+        border-radius: 20px;
+        content: '';
+        display: inline-block;
+        height: 20px;
+        left: 0;
+        margin-top: -10px;
+        position: absolute;
+        top: 50%;
+        width: 20px;
+      }
+
+      &::after {
+        background-color: $c-primary;
+        border-radius: 20px;
+        display: block;
+        height: 10px;
+        left: 11px;
+        margin-left: -6px;
+        margin-top: -6px;
+        position: absolute;
+        top: 13px;
+        width: 10px;
+        z-index: 1;
+      }
+    }
+  }
 }
 
-input[type=checkbox] + label,
-input[type=radio] + label {
-  display: block;
-  overflow: hidden;
-  padding-left:  5px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-
-input[type=checkbox] { display: none; } // hide the checkbox itself
-input[type=radio] { display: none; } // hide the checkbox itself
-
-input[type=checkbox] + label:after,
-input[type=checkbox] + label:before,
-input[type=radio] + label:after,
-input[type=radio] + label:before {
-  display: block;
-  position: absolute;
-  font-size:14px;
-  height: 18px;
-  line-height:  18px;
-  margin-top: -9px;
-  top: 50%;
-  width: 18px;
-  left:0;
-}
-
-// unchecked checkbox and radio icon
-input[type=checkbox] + label:after,
-input[type=radio] + label:after {
-  background-color: $bgc-form;
-  border: $bd-medium;
-  border-radius: $bdr-medium;
-  content: '';
-}
-
-// radio icon
-input[type=radio] + label:after {
-  border-radius: 99px;
-}
-
-// icon
-input[type=checkbox] + label:before{
-  content: "\f00c";
-  font-family: FontAwesome;
-  left: 2px;
-  top: 11px;
-  transform: scale(0);
-  z-index: 1;
-
-}
-input[type=radio] + label:before {
-  background-color: $c-primary;
-  border-radius: 99px;
-  content: '';
-  display: block;
-  height: 8px;
-  left: 5px;
-  margin-top: -4px;
-  top: 50%;
-  transform: scale(0);
-  width: 8px;
-  z-index: 1;
-}
-
-input[type=checkbox]:checked + label,
-input[type=radio]:checked + label {
-  color: $c-primary;
-}
-
-input[type=checkbox]:checked + label:before,
-input[type=radio]:checked + label:before {
-  animation: radioAndCheckboxAnimation .25s;
-  color: $c-primary;
-  transform: scale(1);
-}
-
-@keyframes radioAndCheckboxAnimation {
+@keyframes checkboxAndRadioAnimation {
   0% {
-    transform: scale(0);
+    transform: scale(0) rotate(45deg);
   }
 
   50% {
-    transform: scale(1.5);
+    transform: scale(1.5) rotate(45deg);
   }
 
   100% {
-    transform: scale(1);
+    transform: scale(1) rotate(45deg);
   }
 }
 
-// inputs
+
 .input {
   background-color: $bgc-form;
-  display: inline-block;
+  display: block;
   margin-right: 10px;
   padding: 0;
   position: relative;
@@ -320,13 +269,7 @@ input[type=radio]:checked + label:before {
   :focus,
   :active {
     background-color: $bgc-form-focus;
-  }
-
-  &.full-width {
-    display: inline-block;
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%;
+    border-radius: $bdr-form;
   }
 
   input {
@@ -334,191 +277,89 @@ input[type=radio]:checked + label:before {
     border: 0;
     box-shadow: none;
     color: $c-form;
-    height: 44px;
-    line-height: 44px;
-    margin-bottom: 0;
+    font-size: $fz-form;
+    line-height: $lh-medium;
+    margin: 0;
     outline: none;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: $p-form;
     width: 100%;
 
-    @include media-breakpoint-up(bp-medium) {
-      padding: 8px 15px;
+    &::placeholder {
+      color: $c-form-placeholder;
     }
   }
-}
 
-// input with icon
-.input-with-icon {
-  position: relative;
-
-  input {
-    padding-right: 42px;
+  &-withIcon {
+    input {
+      padding-right: $size-form-input-icon * 2;
+    }
   }
 
-  .input-icon {
-    color: $c-gray;
-    margin-top: -6px;
+  &-icon {
+    fill: $c-form-input-icon;
+    height: $size-form-input-icon;
+    margin-top: -$size-form-input-icon / 2;
     position: absolute;
-    right: 12px;
+    right: $m-medium;
     top: 50%;
-
-    &.fa-search {
-      color: $c-primary;
-      margin-top: -7px;
-    }
+    width: $size-form-input-icon;
   }
 
-  // button styles (pe. search)
-  button.input-icon {
-    background: none;
-    border: 0;
-    cursor: pointer;
-    padding: 0;
-  }
-}
-
-// input icon
-.input-icon {
-  input {
-    padding: 0;
-    width: 0;
-  }
-
-  i {
-    padding: 14px 15px 14px 12px;
-  }
-}
-
-
-/**
- *  Input group
- *
- *  Markup:
- *  -------
- *
- *  <div class="input-group {{ $errors->first('email', 'has-error') }}">
- *     <div class="input full-width ">
- *         <input type="email" class="form-control" name="email" placeholder="email address" value="{{{ Input::old('email') }}}">
- *     </div>
- *     <span class="help-block">{{ $errors->first('email', ':message') }}</span>
- *  </div>
- *
- */
-
-.input-group {
-  margin-bottom: 20px;
-
-  .textarea,
-  .input,
-  .select {
-    margin-bottom: 0;
-  }
-}
-
-/**
- *  FORM GROUP
- *
- *  Markup:
- *  -------
- *
- *  <div class="form-group">
- *    <div class="input form-group-item">
- *      <input type="text" name="" id="" placeholder="Search an app and start tracking...">
- *    </div>
- *    <div class="select form-group-item">
- *      <select class="class">
- *        <option value="asd">asd</option>
- *        <option value="asfdasd">asfdasd</option>
- *      </select>
- *      <i class="js-select-opener fa fa-angle-down fa-2"></i>
- *    </div>
- *  </div>
- */
-
-.form-group {
-  background-color: $bgc-form;
-  border: $bd-medium;
-  border-radius: $bdr-medium;
-  display: inline-block;
-  margin-bottom: 20px;
-
-  .textarea,
-  .input,
-  .select {
-    margin-bottom: 0;
-  }
-
-  .form-group-item {
-    border: 0;
-    border-radius: 0;
+  // input variations
+  &-fullWidth {
+    display: block;
+    margin-left: 0;
     margin-right: 0;
-
-    &:last-child {
-      border-right: 0;
-    }
+    width: 100%;
   }
 }
 
-// forms in row (reduce space between grid columns)
-.form-row {
-  margin-left: -3px!important;
-  margin-right: -3px!important;
-}
-
-.form-row div[class^="col"] {
-  padding-left: 3px;
-  padding-right: 3px;
-}
-
-
 /**
- *  FORM COLLAPSE (items in row without gap between them)
+ *  FORM COLLAPSED (items in row without gap between them)
  *
  *  Markup:
  *  -------
  *
- *  <div class="form-collapse">
- *    <div class="input item item-main">
+ *  <div class="formCollapsed">
+ *    <div class="input formCollapsed-item formCollapsed-itemPrimary">
  *      <input id="name" placeholder="Klingon search" type="text" />
  *    </div>
- *    <div class="select item">
+ *    <div class="select formCollapsed-item">
  *      <select name="country-code" id="country-code">
  *        <option value="AO"> Angola</option>
  *      </select>
- *      <i class="fa fa-angle-down fa-2"></i>
  *    </div>
- *    <button class="item button button-primary">
+ *    <button class="formCollapsed-item button button-primary">
  *      Search
  *    </button>
  *  </div>
  **/
 
-.form-collapse {
+.formCollapsed {
   display: flex;
   margin-bottom: 20px;
 
-  .item-main {
-    flex: 1;
-  }
+  &-item {
+    border-radius: 0 !important;
+    margin: 0 !important;
 
-  .item {
-    border-radius: 0;
-    font-size: 15px;
-    margin: 0;
 
     &:first-child {
-      border-bottom-left-radius: $bdr-medium;
-      border-top-left-radius: $bdr-medium;
+      border-bottom-left-radius: $bdr-form !important;
+      border-top-left-radius: $bdr-form !important;
     }
 
     &:last-child {
-      border-bottom-right-radius: $bdr-medium;
-      border-top-right-radius: $bdr-medium;
+      border-bottom-right-radius: $bdr-form !important;
+      border-top-right-radius: $bdr-form !important;
     }
 
     &:not(:last-child) {
       border-right: 0;
+    }
+
+    &Primary {
+      flex: 1;
     }
   }
 }
